<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Ra</string>
    <string name="TitleActivityTiles">Tiles</string>
    <string name="TitleActivityScore">Score</string>
    <string name="TitleActivityNewGame">New Game</string>
    <string name="TitleActivityGame">Game board</string>
    <string name="TitleEpoch">"Epoch: %d"</string>
    <string name="TitleAuctionTrack">Auction:</string>
    <string name="TitleBidDialog">Bid</string>
    <plurals name="TitleGodDialog">
        <item quantity="one">Exchange %d God tile</item>
        <item quantity="other">Exchange up to %d God tiles</item>
    </plurals>
    <string name="TitleDisasterDialog">Remove 2 for disaster</string>
    <string name="TitleScore">Score</string>
    <string name="TitleScoreEpochDuring">During Epoch %d</string>
    <string name="TitleScoreEpochEnd">at End of  Epoch %d</string>
    <string name="TitleScoreFinal">Final</string>
    <string name="SplashLoading">Loading &#8230;</string>
    <string name="CurrentPlayer">Current Player: %s</string>
    <string name="btnNew">New</string>
    <string name="btnResume">Resume</string>
    <string name="btnQuit">Quit</string>
    <string name="btnSettings">Settings</string>
    <string name="btnRules">Rules</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnNext">Next</string>
    <string name="btnDraw">Draw</string>
    <string name="btnAuction">Auction</string>
    <string name="btnGod">God</string>
    <string name="defaultName">You</string>
    <string name="StatusTurnStart">%s\'s turn</string>
    <string name="StatusDrewTile" formatted="false">%s drew a %s tile</string>
    <string name="StatusUsedGod">%s used 1 or more God tiles</string>
    <string name="StatusCallsAuction">%s calls Ra</string>
    <string name="StatusAuctionPlayerBid" formatted="false">%s bid %d</string>
    <string name="StatusAuctionPlayerPassed">%s passed</string>
    <string name="StatusAuctionPlayerInProgress">%s bidding</string>
    <string name="StatusAuctionWon">%s won the auction</string>
    <string name="StatusAuctionEveryonePassed">Everyone passed in the auction</string>
    <string name="StatusEpochOver">Epoch %d is over</string>
    <string name="StatusGameOver">%s won</string>
    <string name="StatusResolveDisaster">%s resolving disasters</string>
    <string name="StatusResolveDisasterCompleted">%s resolved disasters</string>
    <string name="PlayerNamePlaceholder" translatable="false">%s:</string>
    <string name="BidPass">Pass</string>
    <string name="TitlePlayer1">Player 1:</string>
    <string name="TitlePlayer2">Player 2:</string>
    <string name="TitlePlayer3">Player 3:</string>
    <string name="TitlePlayer4">Player 4:</string>
    <string name="TitlePlayer5">Player 5:</string>
    <string name="TitleSeed">Random Seed:</string>
    <string name="tbtnHuman">Human</string>
    <string name="tbtnAI">AI</string>
    <string name="tableHeaderPlayer">Player</string>
    <string name="tableHeaderPrevious">Previous</string>
    <string name="tableHeaderNew">New</string>
    <string name="shareScoreStart">Ra Score: </string>
    <string name="shareScoreNameAI">%s (AI)</string>
    <string name="settingTitleRandomSeedEnabled">Random Seed</string>
    <string name="settingTitleAnimationEnabled">Animation</string>
    <string-array name="NamesAiEasy">
        <item>AI Easy 1</item>
        <item>Anubis</item>
        <item>Bastet</item>
        <item>Chnum</item>
        <item>Horus</item>
    </string-array>
    <string-array name="NamesAiMedium">
        <item>AI Medium 1</item>
        <item>Seth</item>
        <item>Sobek</item>
        <item>Thoth</item>
        <item>Uto</item>
    </string-array>
    <string-array name="NamesAiHard">
        <item>AI Hard 1</item>
        <item>AI Hard 2</item>
        <item>AI Hard 3</item>
        <item>AI Hard 4</item>
        <item>AI Hard 5</item>
    </string-array>
    <string-array name="Tiles">// Must be in same order as RaGame.Tile enum
        <item></item>
        // none
        <item>Ra</item>
        // Ra
        <item>God</item>
        // God
        <item>Gold</item>
        // Gold
        <item>Pharaoh</item>
        // Pharaoh
        <item>Nile</item>
        // Nile
        <item>Flood</item>
        // Nile Flood
        <item>Agriculture</item>
        // Civs
        <item>Art</item>
        <item>Astronomy</item>
        <item>Religion</item>
        <item>Writing</item>
        <item>Fortress</item>
        // Monuments
        <item>Obelisk</item>
        <item>Palace</item>
        <item>Pyramid</item>
        <item>Sphinx</item>
        <item>Statues</item>
        <item>Step Pyramid</item>
        <item>Temple</item>
        <item>Funeral</item>
        // Disasters (Pharaoh, Nile, Civs, Monuments)
        <item>Drought</item>
        <item>Unrest</item>
        <item>Earthquake</item>
    </string-array>
</resources>