<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ben.ra.NewGameActivity">

    <TextView
        android:id="@+id/textViewTitleNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleActivityNewGame"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroupNumPlayers"
        android:layout_width="174dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioPlayers3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onClickNewGameRadio"
            android:text="3" />

        <RadioButton
            android:id="@+id/radioPlayers4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameRadio"
            android:text="4" />

        <RadioButton
            android:id="@+id/radioPlayers5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameRadio"
            android:text="5" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitlePlayer1"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:enabled="false"
            android:text="@string/cbHuman" />
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitlePlayer2"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameCheckbox"
            android:text="@string/cbHuman" />
        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitlePlayer3"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameCheckbox"
            android:text="@string/cbHuman" />
        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitlePlayer4"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameCheckbox"
            android:text="@string/cbHuman" />
        <EditText
            android:id="@+id/editText4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayer5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlayer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitlePlayer5"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameCheckbox"
            android:text="@string/cbHuman" />
        <EditText
            android:id="@+id/editText5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameButton"
            android:text="@android:string/ok" />
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNewGameButton"
            android:text="@android:string/cancel">
            <requestFocus/>
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TitleSeed"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <EditText
            android:id="@+id/editTextSeed"
            android:layout_width="0dp"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>

    </LinearLayout>

</LinearLayout>
